# SocialNetwork

./: CMakeLists.txt  README.md  service_config.json
common/: FaasWorker.h  ThreadPool.h  utils.h
debug/: compose_review.json  register_movieid.json  store_review4.json  upload_movieid1.json  upload_movieid3.json  upload_rating2.json  upload_rating3.json  upload_text1.json  upload_text3.json  upload_uniqueid1.json  upload_uniqueid3.json
k8s/: third-party.yml
scripts/: clean.py  invoke.sh  register_movieid.py  start_all.sh  start_all_launcher.sh  stop_all.sh
src/: CMakeLists.txt
src/0_ComposeReviewService/: ComposeReview.cpp
src/1_MovieIdService/: MovieIdHandler.h  RegisterMovieId.cpp  UploadMovieId1.cpp
src/1_TextService/: TextHandler.h  UploadText1.cpp
src/1_UniqueIdService/: UniqueIdHandler.h  UploadUniqueId1.cpp
src/2_RatingService/: RatingHandler.h  UploadRating2.cpp
src/3_ComposeReviewService/: ComposeReviewHandler.h  UploadMovieId3.cpp  UploadRating3.cpp  UploadText3.cpp  UploadUniqueId3.cpp
src/4_MovieReviewService/: MovieReviewHandler.h
src/4_ReviewStorageService/: ReadReview4.cpp  StoreReview4.cpp
test/: CMakeLists.txt  testStoreReview4.cpp  testUploadText3.cpp
utils/: utils_for_test.h
wrk2_scripts/: compose-review.lua
