include_directories(${EXP02_BASE_DIR}/utils)
include_directories(${EXP02_BASE_DIR}/common)

set(TEST_EXP02_COMMON_LIB nlohmann_json fmt)

set(TEST_EXP02_UPLOAD_MOVIE_ID_1                     test_exp02_upload_movie_id_1)
set(TEST_EXP02_UPLOAD_TEXT_1                         test_exp02_upload_text_1)
set(TEST_EXP02_UPLOAD_UNIQUE_ID_1                    test_exp02_upload_unique_id_1)
set(TEST_EXP02_UPLOAD_USER_ID_1                      test_exp02_upload_user_id_1)
set(TEST_EXP02_UPLOAD_RATING_2                       test_exp02_upload_rating_2)
set(TEST_EXP02_UPLOAD_RATING_3                       test_exp02_upload_rating_3)
set(TEST_EXP02_UPLOAD_TEXT_3                         test_exp02_upload_text_3)
set(TEST_EXP02_UPLOAD_UNIQUE_ID_3                    test_exp02_upload_unique_id_3)
set(TEST_EXP02_UPLOAD_USER_ID_3                      test_exp02_upload_user_id_3)
set(TEST_EXP02_UPLOAD_MOVIE_REVIEW_4                 test_exp02_upload_movie_review_4)
set(TEST_EXP02_READ_REVIEW_4                         test_exp02_read_review_4)
set(TEST_EXP02_STORE_REVIEW_4                        test_exp02_store_review_4)
set(TEST_EXP02_UPLOAD_USER_REVIEW_4                  test_exp02_upload_user_review_4)

#add_executable(${TEST_EXP02_UPLOAD_MOVIE_ID_1}       )
#add_executable(${TEST_EXP02_UPLOAD_TEXT_1}           )
#add_executable(${TEST_EXP02_UPLOAD_UNIQUE_ID_1}      )
#add_executable(${TEST_EXP02_UPLOAD_USER_ID_1}        )
#add_executable(${TEST_EXP02_UPLOAD_RATING_2}         )
#add_executable(${TEST_EXP02_UPLOAD_RATING_3}         )
add_executable(${TEST_EXP02_UPLOAD_TEXT_3}           testUploadText3.cpp ${EXP02_BASE_DIR}/utils/http_parser.c)
#add_executable(${TEST_EXP02_UPLOAD_UNIQUE_ID_3}      )
#add_executable(${TEST_EXP02_UPLOAD_USER_ID_3}        )
#add_executable(${TEST_EXP02_UPLOAD_MOVIE_REVIEW_4}   )
#add_executable(${TEST_EXP02_READ_REVIEW_4}           )
add_executable(${TEST_EXP02_STORE_REVIEW_4}          testStoreReview4.cpp ${EXP02_BASE_DIR}/utils/http_parser.c)
#add_executable(${TEST_EXP02_UPLOAD_USER_REVIEW_4}    )

#target_link_libraries(${TEST_EXP02_UPLOAD_MOVIE_ID_1}       ${TEST_EXP02_COMMON_LIB})
#target_link_libraries(${TEST_EXP02_UPLOAD_TEXT_1}           ${TEST_EXP02_COMMON_LIB})
#target_link_libraries(${TEST_EXP02_UPLOAD_UNIQUE_ID_1}      ${TEST_EXP02_COMMON_LIB})
#target_link_libraries(${TEST_EXP02_UPLOAD_USER_ID_1}        ${TEST_EXP02_COMMON_LIB})
#target_link_libraries(${TEST_EXP02_UPLOAD_RATING_2}         ${TEST_EXP02_COMMON_LIB})
#target_link_libraries(${TEST_EXP02_UPLOAD_RATING_3}         ${TEST_EXP02_COMMON_LIB})
target_link_libraries(${TEST_EXP02_UPLOAD_TEXT_3}           ${TEST_EXP02_COMMON_LIB})
#target_link_libraries(${TEST_EXP02_UPLOAD_UNIQUE_ID_3}      ${TEST_EXP02_COMMON_LIB})
#target_link_libraries(${TEST_EXP02_UPLOAD_USER_ID_3}        ${TEST_EXP02_COMMON_LIB})
#target_link_libraries(${TEST_EXP02_UPLOAD_MOVIE_REVIEW_4}   ${TEST_EXP02_COMMON_LIB})
#target_link_libraries(${TEST_EXP02_READ_REVIEW_4}           ${TEST_EXP02_COMMON_LIB})
target_link_libraries(${TEST_EXP02_STORE_REVIEW_4}          ${TEST_EXP02_COMMON_LIB})
#target_link_libraries(${TEST_EXP02_UPLOAD_USER_REVIEW_4}    ${TEST_EXP02_COMMON_LIB})